third_party/WebKit/LayoutTests/fast/forms/resources/textarea-live-pseudo-selectors.js
@@ -37,7 +37,7 @@ shouldBe(elBackground, 'invalidColor');
 
 debug('Change name:');
 el.name = '';
-shouldBe(elBackground, 'normalColor');
+shouldBe(elBackground, 'invalidColor');
 el.name = 'bar';
 shouldBe(elBackground, 'invalidColor');
 
@@ -58,7 +58,7 @@ shouldBe(elBackground, 'invalidColor');
 debug('Inside/outside of a form:');
 el = makeInvalid();
 nonForm.appendChild(el);
-shouldBe(elBackground, 'normalColor');
+shouldBe(elBackground, 'invalidColor');
 form.appendChild(el);
 shouldBe(elBackground, 'invalidColor');
 
